# kakao-agent

./: README.md  agent_app.py  app.py  basic_app.py  main.ipynb  pyproject.toml  request_sample.json
configs/: config.py
data/: user_data.db
modules/: __init__.py  agent.py  agent_previous.py  agent_ver0.py  db.py  rss.py
notebooks/: db_test.ipynb  graph.ipynb  sample_data.json  start.ipynb  test.ipynb  weather_api.ipynb
old/: app.py
utils/: util.py
