[tool.poetry]
name = "kakaochatbot"
version = "0.1.0"
description = ""
authors = ["ccw7463 <ccw7463@example.com>"]
readme = "README.md"

# 포함할 패키지 지정
packages = [
    { include = "utils" },
    { include = "notebooks" }
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
ipykernel = "^6.29.5"
flask-caching = "^2.3.0"
apscheduler = "^3.11.0"
openai = "^1.58.1"
tiktoken = "^0.8.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
ngrok = "^1.4.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
langchain-openai = "^0.2.14"
langgraph = "^0.2.60"
bs4 = "^0.0.2"
ml-collections = "^1.0.0"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
feedparser = "^6.0.11"
langchain-community = "^0.3.14"
html2text = "^2024.2.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
